--- a/blog.html
+++ b/blog.html
@@ -52,14 +52,14 @@
                   </li>
 
                   <li class="nav-item">
-                    <a class="ud-menu-scroll" href="#about">About</a>
+                    <a class="ud-menu-scroll" href="#features">About</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a class="ud-menu-scroll" href="#pricing">Pricing</a>
                   </li>
                   <li class="nav-item">
                     <a class="ud-menu-scroll" href="#team">Team</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                     <a class="ud-menu-scroll" href="#contact">Contact</a>
                   </li>
