--- a/login.html
+++ b/login.html
@@ -52,14 +52,14 @@
                   </li>
 
                   <li class="nav-item">
-                    <a class="ud-menu-scroll" href="#about">About</a>
+                    <a class="ud-menu-scroll" href="#features">About</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a class="ud-menu-scroll" href="#pricing">Pricing</a>
                   </li>
                   <li class="nav-item">
                     <a class="ud-menu-scroll" href="#team">Team</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                     <a class="ud-menu-scroll" href="#contact">Contact</a>
                   </li>
@@ -104,14 +104,7 @@
                 </ul>
               </div>
 
-              <div class="navbar-btn d-none d-sm-inline-block">
-                <a href="login.html" class="ud-main-btn ud-login-btn">
-                  Sign In
-                </a>
-                <a class="ud-main-btn ud-white-btn" href="javascript:void(0)">
-                  Sign Up
-                </a>
-              </div>
+            
             </nav>
           </div>
         </div>
@@ -140,7 +133,7 @@
           <div class="col-lg-12">
             <div class="ud-login-wrapper">
               <div class="ud-login-logo">
-                <img src="assets/images/logo/logo-2.svg" alt="logo" />
+                <img src="assets/images/logo/logo.svg" alt="logo" />
               </div>
               <form class="ud-login-form">
                 <div class="ud-form-group">
