--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <p class="join-description">
                   Stay updated and connect with our community by joining our WhatsApp group.
                 </p>
-                <a href="YOUR_WHATSAPP_GROUP_LINK" class="join-button" target="_blank">
+                <a href="https://chat.whatsapp.com/EIMpB3QmUXZ9uoZm3MYhui" class="join-button" target="_blank">
                   <i class="lni lni-whatsapp"></i> Join Now
                 </a>
               </div>
@@ -168,7 +168,7 @@
                 <p class="join-description">
                   Stay connected and get the latest updates by following our Facebook page.
                 </p>
-                <a href="YOUR_FACEBOOK_PAGE_LINK" class="join-button facebook-button" target="_blank">
+                <a href="https://www.facebook.com/p/Kadda-Coach-61559646699993" class="join-button facebook-button" target="_blank">
                   <i class="lni lni-facebook"></i> Follow Us
                 </a>
               </div>
@@ -179,7 +179,7 @@
                 <p class="join-description">
                   Stay connected and enjoy our latest videos by following our TikTok page.
                 </p>
-                <a href="YOUR_TIKTOK_PAGE_LINK" class="join-button tiktok-button" target="_blank">
+                <a href="https://www.tiktok.com/@kadda.coach.app" class="join-button tiktok-button" target="_blank">
                   <i class="lni lni-tiktok"></i> Follow Us
                 </a>
               </div>
